# SkySpecServer

./: CMakeLists.txt  README.md
exampleTests/: test.cpp
include/SkySpec/: Server.h
src/: Plugin.cpp  Server.cpp
testClient/: main.cpp
